# Hacker-Lang

./: .gitattributes  .linguist  Cargo.toml  LICENSE  Project.toml  README.adoc  README.md  build.hacker  build.hl
CLI/bytes/: LICENSE  README.md  go.mod  shard.yml
CLI/hlh/: shard.yml
CLI/hli/: README.md
CORE/hacker-compiler/: Cargo.toml
CORE/hacker-parser/: Cargo.toml  build.zig  utils.zig
bit/: bit.hk  bit.py  main.hl
cli/bytes/: README.md
cli/hackerc/: go.mod  main.go
cli/hli/: go.mod  main.go  shard.yml
cli/repl/: main.py
core-libs/: fs.hl
core/hacker-ast/: Cargo.toml
core/hacker-compiler/: Cargo.toml
core/hacker-lexer/: main.cpp
core/hacker-parser/: main.cpp
core/hacker-plsa/: main.cpp
core/hacker-runtime/: Cargo.toml  go.mod  main.go
core/hacker-sa/: Cargo.toml
example/: example.hacker  example.hl  hacker.bytes
example/.hacker/: example.hacker
example/.hk/: Bytes.hk  Hacker-Lang.hk  example.hk  ghost-protocol.hk  neon-render.hk  task-flow.hk
example/.hl/: advanced_syntax.hl  cleanup_util.hl  dev_env.hl  everything.hl  main.hl  network.hl  security_audit.hl  server_deploy.hl  showcase.hl  update.hl
example/1/: main.hacker
example/2/: bytes.yaml  main.hacker
example/3/: bytes.yaml  hacker.bytes  main.hacker
example/4/: hacker.bytes  main.hacker
example/5/: main.hacker
examples/: backup.hl  hello.hl  log_analyzer.hl  network_audit.hl  quick_ref.hl  security_check.hl  showcase.hl  string_demo.hl  update.hl
examples/gen-1/: deploy.hl  hello.hl  port_scanner.hl  showcase.hl  sysinfo.hl
examples/gen-2/: arena_demo.hl  goroutines.hl  showcase.hl
hacker-compiler/: Cargo.toml
hacker-compiler/src/: main.rs
hacker-editor/: editor.py  highlighter.py  index.html  index.ts  main.js  main.py  main.ts  package.json  preload.js  preload.ts  renderer.js  runner.py  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
hacker-editor/src/: App.tsx
hacker-library/: go.mod  hacker-library.js  main.go  package.json
hacker-library/index-packages/: package-list.hacker
hacker-packages/: gamescope-session-steam.hacker  install-hla.hl  nvidia-drivers.hacker  package-list.hacker  remove-hla.hl  to-delete.hacker  version.hacker  xanmod-cpu.hacker
hacker-parser/: build.zig  hacker_parser.py  main.py  main.zig  parse.zig  repl.py  utils.zig
hacker-runtime/: main.go
hacker-script/compiler/: Cargo.toml  (+1 more)
hackerc/: build.hacker  go.mod  hacker_parser.py  main.cr  main.go  main.py  parser.py  repl.py  shard.yml  ui.go
hlu/: README.md
main-libs/: cli.hl  colors.hl  crypto.hl  fs.hl  hacker.hl  hk-parser.hl  json.hl  net.hl  proc.hl  progress-bar.hl  str.hl  sys.hl
mime/: hacker-lang.xml
repository/: bytes.io  plugins-repo.hk  source-repo.hk  virus.io
source-code/: aa.c  bit.hl  bit.lua  gc.c  hlh
source-code/cli/: Cargo.toml
source-code/cli/bytes/: main.go
source-code/cli/hackerc/: Cargo.toml  go.mod  main.py
source-code/cli/hl/: Cargo.toml  go.mod  main.go  main.odin  shard.yml
source-code/cli/hl/src/: main.cr  main.rs
source-code/cli/hlh/: main.odin
source-code/cli/hli/: Cargo.toml  main.go  main.py
source-code/cli/hlp/: shard.yml
source-code/cli/hlp/src/: main.cr
source-code/cli/repl/: Cargo.toml
source-code/cli/src/: main.rs
source-code/cli/virus/: Cargo.toml
source-code/cli/virus/src/: main.rs
source-code/compiler/: Cargo.toml
source-code/compiler/src/: bytecode.rs  cache.rs  error.rs  lib.rs  linker.rs  lower.rs  optimize.rs  runtime.rs  serialize.rs
source-code/compiler/src/codegen/: emit.rs  ir.rs  lower.rs  mod.rs
source-code/compiler/src/runtime/: mod.rs  runtime.rs
source-code/compiler/src/runtime/runtime_c/: hl_runtime.c  hl_runtime.h
source-code/core/: Cargo.toml  deps.rs  parser.rs
source-code/core/hacker-compiler/: Cargo.toml
source-code/core/hacker-compiler/src/: main.rs
source-code/core/hacker-network/: README.md  main.c
source-code/core/hacker-plsa/: Cargo.toml  main.cpp  main.odin
source-code/core/hacker-plsa/src/: main.rs
source-code/core/hacker-runtime/: Cargo.toml
source-code/core/hacker-runtime/src/: main.rs
source-code/core/hl-compiler/: Cargo.toml
source-code/core/hl-compiler/src/: lib.rs  main.rs
source-code/core/hl-network/: main.c
source-code/core/hl-plsa/: Cargo.toml
source-code/core/hl-plsa/src/: lib.rs  main.rs
source-code/core/hl-runtime/: Cargo.toml
source-code/core/hl-runtime/src/: lib.rs  main.rs
source-code/core/src/: arena.rs  ast.rs  completion.rs  config.rs  deps.rs  diagnostics.rs  env.rs  env_manager.rs  executor.rs  extern_runner.rs  import_spec.rs  lexer.rs  lib.rs  libs.rs  parser.rs  quick.rs
source-code/hl-compiler/: Cargo.toml  build.rs
source-code/hl-compiler/modules/: hl_collections.c  hl_runtime.c  hl_runtime.h  hl_string.c
source-code/hl-compiler/src/: args.rs  ast.rs  codegen.rs  codegen_emit.rs  ir.rs  linker.rs  main.rs  passes.rs  paths.rs  plsa.rs
source-code/hl-plsa/: Cargo.toml
source-code/hl-plsa/src/: analysis.rs  ast.rs  grammar.pest  lib.rs  lib_resolver.rs  main.rs  parser.rs
source-code/hl-runtime/: Cargo.toml  build.rs
source-code/hl-runtime/src/: ast.rs  bytecode.rs  cache.rs  compiler.rs  executor.rs  gc_ffi.rs  jit.rs  main.rs  optimizer.rs  vm.rs
source-code/jit/: Cargo.toml
source-code/jit/src/: interpreter.rs  jit_engine.rs  lib.rs  runner.rs  runtime.rs
source-code/parser/: Cargo.toml
source-code/parser/src/: ast.rs  extern_spec.rs  gen.rs  import_spec.rs  lexer.rs  lib.rs  parser.rs  shebang.rs
source-code/shell/: Cargo.toml
source-code/shell/src/: builtins.rs  completion.rs  lib.rs  prompt.rs
source-code/virus/: Cargo.toml
source-code/virus/cli/: Cargo.toml
source-code/virus/cli/src/: config.rs  libs.rs  main.rs  repo.rs  ui.rs
source-code/virus/transpiler/: Cargo.toml
source-code/virus/transpiler/src/: lib.rs
src/: main.hcs
tests/: arena_functions.hl  bytecode_basics.hl  cache_management.hl  compiler_pipeline.hl  config_hk.hl  env_manager.hl  extern_system.hl  jit_arithmetic.hl  mod_imports.hl  performance.hl  rolling_gen.hl  test_runner.hl
(+69 files in other folders)
