[workspace]
members = [
    "source-code/core",
    "source-code/parser",
    "source-code/shell",
    "source-code/compiler",
    "source-code/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0"
authors = ["HackerOS Team <hackeros068@gmail.com>"]

[workspace.dependencies]
anyhow        = "1"
colored       = "2"
dirs          = "5"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap          = { version = "4", features = ["derive"] }
rustyline     = "12"
rustc-hash    = "1"
smallvec      = "1"
which         = "6"
nix           = { version = "0.29", features = ["user"] }
thiserror     = "1.0"
cranelift-codegen = { version = "0.113", features = ["all-arch"] }
cranelift-frontend = "0.113"
cranelift-module   = "0.113"
cranelift-object   = "0.113"
object            = { version = "0.36", features = ["write"] }
target-lexicon    = "0.12"
cc                = "1"
tempfile          = "3"

[profile.release]
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"
opt-level     = 3
