[package]
name = "hacker-compiler"
version = "0.1.1"
edition = "2021"

[dependencies]
cranelift = "0.125.3"
cranelift-module = "0.125.3"
cranelift-object = "0.125.3"
cranelift-frontend = "0.125.3"
cranelift-codegen = "0.125.3"
target-lexicon = "0.13.3"
subprocess = "0.2.9"
base64 = "0.22.1"
yaml-rust = "0.4.5"
flate2 = "1.0.34"  # Dodano do kompresji danych dla lżejszych binarek
serde_json = "1.0.1.145"
