[package]
name = "hacker-compiler"
version = "1.2.0"
edition = "2021"

[dependencies]
cranelift = "0.126.1"
cranelift-module = "0.126.1"
cranelift-object = "0.126.1"
cranelift-frontend = "0.126.1"
cranelift-codegen = "0.126.1"
target-lexicon = "0.13.3"
subprocess = "0.2.9"
base64 = "0.22.1"
yaml-rust = "0.4.5"
