[package]
name = "hl-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hl_compiler"
crate-type = ["rlib"]

[dependencies]
hl-parser            = { path = "../parser" }
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
serde.workspace      = true
serde_json.workspace = true
dirs.workspace       = true
colored.workspace    = true
cranelift-codegen.workspace  = true
cranelift-frontend.workspace = true
cranelift-module.workspace   = true
cranelift-native.workspace   = true
bincode.workspace    = true
