[package]
name = "hacker-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hacker_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
nix.workspace = true
which.workspace = true
colored.workspace = true
