[package]
name        = "hl-compiler"
version     = "1.7.1"
edition     = "2021"
authors     = ["HackerOS Team <hackeros068@gmail.com>"]
description = "hacker-lang AOT compiler — .hl → native binary via LLVM IR + gcc"

[dependencies]
inkwell    = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap       = { version = "4.4", features = ["derive"] }
colored    = "2.0"
dirs       = "5.0"

[build-dependencies]
cc   = "1.0"
dirs = "5.0"

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
panic           = "abort"
strip           = true
overflow-checks = false

[profile.dev]
opt-level = 1
