[package]
name = "hl-plsa"
version = "1.7.1"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0"
colored = "2.0"
dirs = "5.0"
