[package]
name        = "hl-runtime"
version     = "1.7.5"
edition     = "2021"
authors     = ["HackerOS Team <hackeros068@gmail.com>"]
description = "hacker-lang runtime — generacyjny GC, bytecode VM, raw-mmap JIT, persistent shell session"

[dependencies]
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
clap        = { version = "4.4",  features = ["derive"] }
colored     = "2.0"
sha2        = "0.10"
hex         = "0.4"
dirs        = "5.0"
bincode     = "1.3"
anyhow      = "1.0"
aho-corasick = "1.1"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
panic           = "abort"
strip           = true
overflow-checks = false

[profile.dev]
opt-level = 1

[profile.profiling]
inherits = "release"
strip    = false
debug    = 1
