[package]
name = "hl-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hl_jit"
crate-type = ["rlib"]

[dependencies]
hl-parser            = { path = "../parser" }
hl-compiler          = { path = "../compiler" }
hl-core              = { path = "../core" }
anyhow.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
serde.workspace      = true
dirs.workspace        = true
colored.workspace     = true
rustc-hash.workspace  = true
which.workspace       = true
cranelift-codegen.workspace  = true
cranelift-frontend.workspace = true
cranelift-jit.workspace      = true
cranelift-module.workspace   = true
cranelift-native.workspace   = true
bincode.workspace    = true
memmap2.workspace    = true
