[package]
name = "hl-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hl_shell"
crate-type = ["rlib"]

[dependencies]
hl-parser        = { path = "../parser" }
hl-core          = { path = "../core" }
anyhow.workspace      = true
thiserror.workspace   = true
colored.workspace     = true
rustyline.workspace   = true
dirs.workspace        = true
nix.workspace         = true
tracing.workspace     = true
