[workspace]
members  = ["cli", "transpiler"]
resolver = "2"

[workspace.package]
version     = "1.7.1"
edition     = "2021"
authors     = ["HackerOS Team <hackeros068@gmail.com>"]
license     = "MIT"

[workspace.dependencies]
# ── hk-parser ────────────────────────────────────────────────
hk-parser   = "0.2.1"

# ── CLI / terminal ───────────────────────────────────────────
lexopt      = "0.3"
owo-colors  = { version = "4", features = ["supports-colors"] }
indicatif   = { version = "0.17", features = ["improved_unicode"] }
console     = "0.15"

# ── HTTP / async ─────────────────────────────────────────────
reqwest     = { version = "0.12", features = ["blocking", "stream"] }
tokio       = { version = "1",    features = ["full"] }

# ── Pomocnicze ───────────────────────────────────────────────
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
dirs        = "5.0"
walkdir     = "2"
fs_extra    = "1.3"
which       = "6"
