[package]
name = "virus"
version = "1.6.3"
edition = "2021"

[dependencies]
hk-parser = "0.0.1"
hcl-rs = "0.19.4"
clap = { version = "4.5.18", features = ["derive"] }
ratatui = "0.28.1"
crossterm = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
