[package]
name = "virus"
version = "1.7.0"
edition = "2021"

[dependencies]
# Static linking to hl toolchain — virus can run/compile .hl build scripts
hl-runtime = { path = "../hl-runtime" }
hl-compiler = { path = "../hl-compiler" }
lexopt = "0.3"
owo-colors = "4.0"
ureq = { version = "2.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
hk-parser = "0.2.1"
anyhow = "1.0"
toml = "0.8"

