[package]
name = "hacker-plsa"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "hacker-plsa"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
rayon = "1.10.0"
colored = "2.1.0"
anyhow = "1.0.86"
thiserror = "1.0.60"
log = "0.4.21"
env_logger = "0.11.3"
regex = "1.10.4"
serde_yaml = "0.9.34"
