[package]
name = "hl-compiler"
version = "1.7.0"
edition = "2021"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
dirs = "5.0"
hl-plsa = { path = "../hl-plsa" }
