[package]
name = "hacker-runtime"
version = "1.6.0"
edition = "2021"

[dependencies]
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0"
colored = "2.0"
shell-words = "1.1.0"
which = "6.0.0"
dirs = "5.0.1"
base64 = "0.22.1"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
memmap2 = "0.9"
