[package]
name        = "virus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Menedżer projektów hacker-lang — jak Cargo dla .hl"

[[bin]]
name = "virus"
path = "src/main.rs"

[dependencies]
hl-transpiler = { path = "../transpiler" }

hk-parser   = { workspace = true }
lexopt      = { workspace = true }
owo-colors  = { workspace = true }
indicatif   = { workspace = true }
console     = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
dirs        = { workspace = true }
walkdir     = { workspace = true }
fs_extra    = { workspace = true }
which       = { workspace = true }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = true
