[package]
name        = "hl-transpiler"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "hl_transpiler"
crate-type = ["staticlib", "rlib"]

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
walkdir     = { workspace = true }
